# evals

./: .gitignore  pyproject.toml
evals/: api.py  eval.py
evals/datasets/: LDC2021T17.su.xml  ajgt.ipynb  ajgt_analyusis_3_5.ipynb  ajgt_analyusis_4_0_.ipynb  apb.ipynb  arabizioutput.txt  bolt.ipynb  easc.ipynb  getSourceAndTarget.py  metrec.ipynb  output.txt  outputintermediate.txt  padt.ipynb  tashkeela.ipynb  un_v1.ipynb  universal_dependencies_POS.ipynb  unv1.ipynb
evals/datasets/splits_ldc/: getSourceAndTarget.py
evals/elsuite/: classification.py  translate.py
evals/elsuite/classification/: classification.py
evals/elsuite/diacratization/: __init__.py  diacratization.py
evals/elsuite/diacritization/: __init__.py  diacritization.py  utils.py
evals/elsuite/pos_tagging/: __init__.py  pos_tagging.py  utils.py
evals/elsuite/rater/: __init__.py  rater.py
evals/elsuite/summarization/: __init__.py  summarization.py  utils.py
evals/elsuite/translation/: translation.py
evals/eval_results/: padt.jsonl
evals/registry/data/ajgt/: few_shot.jsonl  samples.jsonl
evals/registry/data/apb/: samples.jsonl
evals/registry/evals/: ajgt.yaml  apb.yaml  bolt.yaml  classification.yaml  diacritization.yaml  easc.yaml  meter_classification.yaml  padt.yaml  pos_tagging.yaml  summarization.yaml  tashkeela.yaml  un_v1.yaml  unv1.yaml
evals/wikinews/: ReadMe.md  check_discrepancy.py  clean_preds.py  combine_segments.py  combine_wikinews.py  diac_eval.py  segment.py  split_wikinews.py  wikinews.py  wikinews_overlap.py
evals/wikinews/configs/: segment.yaml
(+17 files in other folders)
